@@ -1,3 +1,4 @@
+- fixed bug in sending lines in multiplayer (2024/02/17 MS)
 - tweaked multiplayer defaults (2024/02/17 MS)
 - added option to customize cpu drop speed (2024/02/17 MS)
 - do not show special piece on lock delay if soft drop pressed (2024/02/17 MS)
